----------------------------------------------------------------------
 OmegaT 2.5.0 update 5
----------------------------------------------------------------------
   7 Enhancements
   5 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
2.5.0 update 5 vs. 2.5.0 update 4


  Implemented requests:

  - Filter for Camtasia Studio for Windows
  http://sourceforge.net/support/tracker.php?aid=3457285

  - TBX entry/concept level note
  http://sourceforge.net/support/tracker.php?aid=3454401

  Other enhancements:

  - Magento CE locale CVS file filter

  - The key is now displayed in the comment pane for all ID-based filters:
Android Resources
Java Resource Bundles
Key=Value Files
Mozilla DTD
ResX
SubRip Subtitles
Windows Resource
WiX

  - Use a larger default size for the statistics dialog (800x400 instead of
400x300)

  - When reading external TMXs, the <hi> tag is skipped, as it cannot correspond
to a tag of a source document

  - The "out of memory" message now refers to the manual

  - Instead of using Java's default memory allocation, the Windows and Linux 
startup scripts now use 512 MB

  Bug fixes:

  - GPL license has an outdated FSF address
  http://sourceforge.net/support/tracker.php?aid=3440748

  - Android filter: non-translatable text was not ignored

  - Log messages on TMX loading were missing

  - In the HHC filter, the comment pane contained Tag: PARAM Attribute: value
for all segments

  - For external TMXs, the parameter "Use XML for standalone tags" was not 
working for all tags

  Localisation updates:

  - Dutch localisation updated to 2.5.0 update 3 (UI, readme, documentation)

  - Italian localisation updated to 2.5.0 update 3 (UI)

----------------------------------------------------------------------
 OmegaT 2.5.0 update 4
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   0 Localisation update